<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".FeedDetailFragment"
	android:layout_margin="5dp"
	android:padding="2dp"
	android:background="#FFFFFF">
	<TextView 
		style="?android:attr/textAppearanceLarge"
		android:id="@+id/feed_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true"
		android:padding="2dp"
		android:textColor="#888888" />
	<View
		android:id="@+id/feed_hr"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/feed_title"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#888888" />
	<TextView 
		android:id="@+id/feed_url"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/feed_hr"
		android:layout_alignParentRight="true"
		android:textColor="#000000" />
	<TextView 
		android:id="@+id/lbl_episode_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/feed_url"
		android:layout_alignParentLeft="true"
		android:paddingLeft="6dp"
		android:paddingTop="8dp"
		android:textColor="#888888"
		android:text="@string/lbl_episode_title"
		android:textSize="15dp" />
	<TextView 
		android:id="@+id/episode_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/lbl_episode_title"
		android:layout_alignParentLeft="true"
		android:paddingLeft="2dp"
		android:textColor="#000000"
		android:textSize="18dp" />
	<TextView 
		android:id="@+id/lbl_episode_file"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/episode_title"
		android:layout_alignParentLeft="true"
		android:paddingLeft="6dp"
		android:textColor="#888888"
		android:text="@string/lbl_episode_file"
		android:textSize="15dp" />
	<TextView 
		android:id="@+id/episode_file"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/lbl_episode_file"
		android:layout_alignParentLeft="true"
		android:paddingLeft="2dp"
		android:textColor="#000000"
		android:textSize="18dp" />
	<TextView 
		android:id="@+id/lbl_episode_file_sz"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/episode_file"
		android:layout_alignParentLeft="true"
		android:paddingLeft="6dp"
		android:paddingTop="8dp"
		android:textColor="#888888"
		android:text="@string/lbl_episode_file_sz"
		android:textSize="15dp" />
	<TextView 
		android:id="@+id/episode_file_sz"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/lbl_episode_file_sz"
		android:layout_alignParentLeft="true"
		android:paddingLeft="2dp"
		android:textColor="#000000"
		android:textSize="18dp" />
	<TextView 
		android:id="@+id/lbl_episode_file_tp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/episode_file_sz"
		android:layout_alignParentLeft="true"
		android:paddingLeft="6dp"
		android:paddingTop="8dp"
		android:textColor="#888888"
		android:text="@string/lbl_episode_file_tp"
		android:textSize="15dp" />
	<TextView 
		android:id="@+id/episode_file_tp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/lbl_episode_file_tp"
		android:layout_alignParentLeft="true"
		android:paddingLeft="2dp"
		android:textColor="#000000"
		android:textSize="18dp" />
	<TextView 
		android:id="@+id/lbl_episode_pub_dt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/episode_file_tp"
		android:layout_alignParentLeft="true"
		android:paddingLeft="6dp"
		android:paddingTop="8dp"
		android:textColor="#888888"
		android:text="@string/lbl_episode_pub_dt"
		android:textSize="15dp" />
	<TextView 
		android:id="@+id/episode_pub_dt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/lbl_episode_pub_dt"
		android:layout_alignParentLeft="true"
		android:paddingLeft="2dp"
		android:textColor="#000000"
		android:textSize="18dp" />
</RelativeLayout>
